MP-2007-11-20-0: Bugfix:    Added test for qstat -j xml and plain output
                            comparison. Test for CR 6440408.
                 Review:    JG

JG-2007-11-20-0: Enhancem.: Added test bugs/issuezilla/2418.
                 Review:    MD

CR-2007-11-15-0: Bugfix:    o Added missing cleanup procedure for issue 88
                 Bugfix:    o config_generic_port() could not be used for
                              ports which are odd number
                 Issue:     Hedeby 178
                 Review:    RH

AA-2007-11-15-1: Enhancem.: added support for new JMX parameters
                            automatic installation
                 Review:    CR

AA-2007-11-15-0: Enhancem.: added support for new JMX parameters
                 Review:    CR

CR-2007-11-14-1: Enhancem.: added new hedeby test: file_permissions
                 Bugfix:    Fixed and enhanced following tests:
                               o manage_admin_user
                               o show_status
                               o issue_67
                               o issue_88
                 Enhancem.: Support for interactive sdmadm command
                 Review:    RH

CR-2007-11-14-0: Bugfix:    Removed possiblity to see plain passwords
                            when testsuite is started in debug mode
                 Review:    JG

RH-2007-11-13-0: Bugfix:    Hedeby non ssl installation was broken
                 Issue:     Hedeby 146
                 Review:    CR

CR-2007-11-13-0: Bugfix:    Fixed problem with connection method setting when
                            creating testsuite configuration from scratch
                 Review:    JG

JG-2007-11-13-0: Bugfix:    Suppress running tests for fixes that have only been
                            done for 6.1 or higher in 6.0 clusters.
                            Some cleanup.
                 Review:    MD

AP-2007-11-09-0: Bugfix:    Updating the checktree_arco due to the creating 60 from 61
